# aSentrX

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: fly-deploy.yml
ai/: asentrx_agent.py
exchanges/: bitfinex_rest_client.py  bitfinex_trader.py
experiments/: analyze_content_with_agent.py  bitfinex.py  bitfinex_execute_order.py  bitfinex_rest.py  bitfinex_wallet_info.py  diagnose_truth_auth.py  execute_order.py  pull_status.py  read_content_from_file.py  test_decodo_proxy.py  twilio_sms.py  write_raw_status_to_file.py
socialmedia/: playwright_client.py  truesocial.py
trader/: trader.py
utils/: __init__.py  logger_config.py  sms_notifier.py  status_parser.py
