[tool.poetry]
name = "aSentrX"
version = "0.1.0"
description = "Trading bot."
authors = ["Felix Frei <felix.frei@gmx.ch>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
logfire = "^4.25.0"
logfire-api = "^4.25.0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
playwright = "^1.58.0"
twilio = "^9.10.2"
beautifulsoup4 = "^4.14.3"
pydantic = "^2.12.5"
pydantic-ai ="^1.62.0"
sentry-sdk = "^2.53.0"
playwright-stealth = "^2.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
